FIX(css): Better font scaling and general spacing.

--- a/css/main.css
+++ b/css/main.css
@@ -14,8 +14,6 @@ html {
 html, body {
   height:100%;
   width: 100%;
-  margin: 0;
-  padding: 0;
 }
 
 
@@ -128,8 +126,12 @@ html {
 /*Overlay*/
 
 #overlay {
-  width: 100%;
-  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 90%;
+  height: 90%;
+  padding: 5%;
   display: grid;
   pointer-events: auto;
   grid-auto-columns: 40% 55%;
@@ -151,7 +153,7 @@ html {
   padding-top: 15%;
   padding-bottom: 15%;
   color: black;
-  font-size: 7.5vh;
+  font-size: 5rem;
   font-weight: 700;
 }
 
@@ -159,13 +161,13 @@ html {
   grid-area: about;
   align-self: center;
   color: black;
-  font-size: 2.5vh;
+  font-size: 2.5rem;
 }
 
 #definition {
   align-content: right;
   font-weight: 666;
-  font-size: 3vh;
+  font-size: 2.75rem;
 }
 
 #links {
@@ -173,7 +175,7 @@ html {
   width: 70%;
   padding-top: 10%;
   grid-area: links;
-  font-size: 4.5vh;
+  font-size: 3rem;
 }
 
 
@@ -274,11 +276,11 @@ img:hover {
 }
 
 #links li .label {
-  color:white;
-  position:absolute;
-  bottom:-20px;
-  left:5px;
-  font-size:1vmax;
+  color: white;
+  position: absolute;
+  bottom: -1.5rem;
+  left: 0.5rem;
+  font-size:2vmax;
   pointer-events: none;
   opacity: 0; 
   visibility: hidden; 
